Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6494

hsm: lfs cannot remove an archived file that has been deleted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • None
    • 3
    • 9223372036854775807

      Once an archived file has been deleted from Lustre, the only way to remove it from an archive is to access the archive and delete it.

      Enhance lfs hsm_remove so it can take an archive id and a fid to delete thta file. The FID has to be known somehow before the file is deleted.

            wc-triage WC Triage
            fzago Frank Zago (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: